changed the structure of the skills section

--- a/index.html
+++ b/index.html
@@ -117,32 +117,32 @@
     <section class="skills">
         <a name="skills"></a>
         <h2>Skills </h2>
-        <ul>
             <section class="mid-skills">
                 <section class="mid-content">
 
                     <img src="css.png" alt="html pic" />
-                    <li><h4> HTML5 & CSS: </h4>
-                    Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
-                    </li>
+               <section class="inner-content">
+                    <h4> HTML5 & CSS: </h4>
+                    <p>sing the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
+                 </section>
                 </section>
             </section>
             <section class="mid-skills">
                 <section class="mid-content">
 
                     <img src="javascript.png" alt="html pic" />
-                    <li>
-                       <h4> JavaScript & jQuery: </h4>Using the programming of HTML including functions, elements targetting, and event delegation.
-                    </li>
+                  <section class="inner-content">
+                       <h4> JavaScript & jQuery: </h4> <p>Using the programming of HTML including functions, elements targetting, and event delegation.</p>
+                   </section>
                 </section>
             </section>
             <section class="mid-skills">
                 <section class="mid-content">
 
                     <img src="ajax.png" alt="html pic" />
-                    <li>
-                        <h4>AJAX, APIs & JSON: </h4> Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
-                    </li>
+                     <section class="inner-content">
+                          <h4>AJAX, APIs & JSON: </h4> <p>Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.</p>
+                     </section>
                 </section>
             </section>
 
@@ -151,18 +151,18 @@
 
 
                     <img src="node.png" alt="html pic" />
-                    <li>
-                        <h4>Node.js: </h4>Using the interface V8 JavaScript runtime. Use code pre-processing in Node.js.
-                    </li>
+                       <section class="inner-content">
+                           <h4>Node.js: </h4><p>Using the interface V8 JavaScript runtime. Use code pre-processing in Node.js.</p>
+                       </section>
                 </section>
             </section>
             <section class="mid-skills-two">
                 <section class="mid-content">
 
                     <img src="react.png" alt="html pic" />
-                    <li>
-                        <h4>React, React Router, Redux: </h4>Using JavaScript library for building user interfaces.
-                    </li>
+                     <section class="inner-content">
+                        <h4>React, React Router, Redux: </h4><p>Using JavaScript library for building user interfaces.</p>
+                      </section>
                 </section>
             </section>
 
@@ -170,12 +170,12 @@
                 <section class="mid-content">
 
                     <img src="github.png" alt="html pic" />
-                    <li>
-                        <h4>Git & Github: </h4>Build projects and use version control, backup, and project hosting.
-                    </li>
+                <section class="inner-content">
+                    <h4>Git & Github: </h4><p>Build projects and use version control, backup, and project hosting.</p>
+                  </section>
                 </section>
             </section>
-            </ul>
+        </ul>
     </section>
 
     <section class="my-contact">
