changed the anchor name tage

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <h2>If you can imagine it, <br /> it can be developed</h2>
     </section>
     <section class="about-me">
-        <a name="about-me"></a>
+        <a title="about-me"></a>
     </section>
     <section class="about">
 
-        <a name="about"></a>
+        <a title="about"></a>
         <h2>About me</h2>
 
         <section class="about-me">
@@ -52,10 +52,10 @@
     </section>
 
     <section class=my-projects>
-        <a name="my-projects"></a>
+        <a title="my-projects"></a>
     </section>
     <section class="projects">
-        <a name="projects"></a>
+        <a title="projects"></a>
 
         <h2>My Projects </h2>
 
@@ -109,12 +109,12 @@
         </ul>
     </section>
     <section class="my-skills">
-        <a name="my-skills"></a>
+        <a title="my-skills"></a>
     </section>
 
 
     <section class="skills">
-        <a name="skills"></a>
+        <a title="skills"></a>
         <h2>Skills </h2>
             <section class="mid-skills">
                 <section class="mid-content">
@@ -177,13 +177,13 @@
     </section>
 
     <section class="my-contact">
-        <a name="my-contact"></a>
+        <a title="my-contact"></a>
     </section>
 
 
 
     <section class="contact">
-        <a name="contact"></a>
+        <a title="contact"></a>
         <h2>Contact me</h2>
         <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
 
