--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img src="css.png" alt="html pic" />
                <section class="inner-content">
                     <h4> HTML5 & CSS: </h4>
-                    <p>sing the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
+                    <p>Using markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
                  </section>
                 </section>
             </section>
