changed the about me section paragraph section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Faras Maroge</h1>
         <section class="navigation">
             <ul>
-                <li> <a href="index.html">Main</a></li>
+                <li><a href="#index.html">Main</a></li>
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
                 <li><a href="#my-skills">Skills</a></li>
@@ -38,13 +38,11 @@
         <section class="about-me">
             <p>
                 Hello! My name is Faras Maroge and I am a Frontend Web Developer. </p>
-            <p>I have a masters degree in computer science from the University of Illinois at Springfield. I love developing websites and learning new technologies. </p>
-            <p>Some of my hobbies are cooking, weight lifting, singing, and playing board games with friends and family.</p>
-            <p>
-                I believe that learning is good for everyone. We have to keep learning in order to keep up with new technology that keeps developing. One of the things that I learned is that we have to embrace all the challenges and deal with hard situations that might be stressful. This is what makes us unique. We all have different skills. My skills are developing websites and I will strive to learn more and more everyday.
+            <p>I have a masters degree in computer science from the University of Illinois at Springfield.  During that time, I was learning the foundations of computer science.  I love developing websites and learning new technologies.</p>
+            <p>I was always interested in learning about programming languages which led me to learn about Web Development.</p>
+            <p>I started out by learning Frontend Development because I felt really fascinated by it and wanted to learn more about that.  I have worked on great projects which are a result of my passion for Web Development. My skills are developing websites and I will strive to learn more and more everyday.
             </p>
-            <p>I continue to work hard and do the best that I can in delivering quality work. In order to get success in anything, you will have to hard work. Good things come to those who work hard and never give up.
-            </p>
+            <p>I continue to work hard everyday and I will do the best that I can in delivering quality work.</p>
         </section>
         <section class="my-pic">
             <img src="Faras.jpg" alt="Faras pic" />
