--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">
+<!--<html lang="en" class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">-->
 
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
         <h1>Faras Maroge</h1>
         <section class="navigation">
             <ul>
-                <li><a href="index.html">Main</a></li>
+                <li><a href="index.html" class= "selected">Main</a></li>
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
                 <li><a href="#my-skills">Skills</a></li>
@@ -27,7 +27,7 @@
     </section>
     
     <section class="about-me">
-        <a title="about-me"></a>
+        <a name="about-me"></a>
     </section>
     <section class="about">
         <a title="about"></a>
@@ -46,7 +46,7 @@
     </section>
 
     <section class="my-projects">
-        <a title="my-projects"></a>
+        <a name="my-projects"></a>
     </section>
    
     <section class="projects">
@@ -95,7 +95,7 @@
     </section>
     
     <section class="my-skills">
-        <a title="my-skills"></a>
+        <a name="my-skills"></a>
     </section>
 
 
@@ -160,9 +160,8 @@
     </section>
 
     <section class="my-contact">
-        <a title="my-contact"></a>
+        <a name="my-contact"></a>
     </section>
-
 
     <section class="contact">
         <a title="contact"></a>
@@ -174,7 +173,6 @@
         <a href="https://github.com/marogef "><img src="github.png" alt="github logo " class="social-icon "></a>
         <a href="mailto:golencrane33@yahoo.com"><img src="email.png" alt="email image" class="social-icon"></a> 
     </section>
-
 
     <footer class="footer ">
           <p>&copy; 2017 Faras M</p>
