--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Faras Maroge</h1>
         <section class="navigation">
             <ul>
-                <li><a href="index.html" class= "selected">Main</a></li>
+                <li><a href="#index.html" class= "selected">Main</a></li>
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
                 <li><a href="#my-skills">Skills</a></li>
@@ -23,7 +23,8 @@
     </header>
 
     <section class="container">
-        <h2>If you can imagine it, <br /> it can be developed</h2>
+        <h1>Faras Maroge</h1>
+        <h2>If you can imagine it,<br/>it can be developed</h2>
     </section>
     
     <section class="about-me">
@@ -178,7 +179,9 @@
           <p>&copy; 2017 Faras M</p>
     </footer>
     <script src="links.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <script src="smooth-scroll.js"></script>
 
 </body>
 </html>
