fixed the width of the skills section in different devices

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Portfolio</title>
     <link rel="stylesheet" href="main.css">
     <link href=' https://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
@@ -178,9 +179,6 @@
     <footer class="footer ">
           <p>&copy; 2017 Faras M</p>
     </footer>
-    <script src="links.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <script src="smooth-scroll.js"></script>
 
 </body>
