added google script code for the slider

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Faras Maroge</h1>
         <section class="navigation">
             <ul>
-                <li><a href="#index.html" class= "selected">Main</a></li>
+                <li><a href="#main" class= "selected">Main</a></li>
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
                 <li><a href="#my-skills">Skills</a></li>
@@ -22,7 +22,9 @@
             </ul>
         </section>
     </header>
-
+    <section class="main">
+        <a name="main"></a>
+    </section>
     <section class="container">
         <h1>Faras Maroge</h1>
         <h2>If you can imagine it,<br/>it can be developed</h2>
@@ -179,6 +181,7 @@
     <footer class="footer ">
           <p>&copy; 2017 Faras M</p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="smooth-scroll.js"></script>
 
 </body>
