--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </section>
    
     <section class="projects">
+        <section class="works">
         <a title="projects"></a>
         <h2>My Projects </h2>
         <ul>
@@ -96,14 +97,15 @@
                         <a href="https://github.com/marogef/fullstack-and-react-capstone-yummly ">Access it on GitHub</a>
             </li>
         </ul>
+        </section>
     </section>
-    
     <section class="my-skills">
         <a name="my-skills"></a>
     </section>
 
 
     <section class="skills">
+        <section class="works">
         <a title="skills"></a>
         <h2>Skills </h2>
             <section class="mid-skills">
@@ -161,6 +163,7 @@
                     </section>
                 </section>
             </section>
+        </section>
     </section>
 
     <section class="my-contact">
@@ -168,6 +171,7 @@
     </section>
 
     <section class="contact">
+    <section class="inner-contact">
         <a title="contact"></a>
         <h2>Contact me</h2>
         <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
@@ -177,7 +181,7 @@
         <a href="https://github.com/marogef "><img src="github.png" alt="github logo " class="social-icon "></a>
         <a href="mailto:golencrane33@yahoo.com"><img src="email.png" alt="email image" class="social-icon"></a> 
     </section>
-
+    </section>  
     <footer class="footer ">
           <p>&copy; 2017 Faras M</p>
     </footer>
