updating the hero image and about me container

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
         <a name="main"></a>
     </section>
     <section class="container">
-        <h1>Faras Maroge</h1>
         <h2>If you can imagine it,<br/>it can be developed</h2>
     </section>
     
     <section class="about-me">
         <a name="about-me"></a>
     </section>
-    <section class="about">
+    <section class="about wrapper">
         <a title="about"></a>
         
         <section class="about-me">
@@ -53,7 +52,7 @@
         <a name="my-projects"></a>
     </section>
    
-    <section class="projects">
+    <section class="projects wrapper">
         <section class="works">
         <a title="projects"></a>
         <h2>My Projects </h2>
@@ -94,7 +93,7 @@
     </section>
 
 
-    <section class="skills">
+    <section class="skills wrapper">
         <section class="works">
         <a title="skills"></a>
         <h2>Skills </h2>
