portfolio design completed

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Portfolio</title>
 
     <link href=' https://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <header>
-        <h1>Faras Maroge</h1>
+        <h1><a href="#main" class="selected">Faras Maroge</a></h1>
         <section class="navigation">
             <ul>
-                <li><a href="#main" class="selected">Main</a></li>
+                <li><a href="#main" class="selected"><i class="fas fa-home"></i></a></li>
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
                 <li><a href="#my-skills">Skills</a></li>
@@ -190,7 +191,7 @@
         </section>
     </section>
     <footer class="footer ">
-        <p>&copy; 2017 Faras M</p>
+        <p>&copy; 2018 Faras Maroge</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="smooth-scroll.js"></script>
