portfolio code format completed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!--<html lang="en" class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">-->
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
     <link href=' https://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -31,34 +30,31 @@
     <section class="container">
         <h2>If you can imagine it,<br/>it can be developed</h2>
     </section>
-
     <section class="about-me">
         <a name="about-me"></a>
     </section>
     <section class="about wrapper">
         <a title="about"></a>
-
-        <section class="about-me">
+        <div class="about-me">
             <h2>About me</h2>
             <p>Hello! My name is Faras Maroge and I am a Frontend Web Developer. </p>
             <p>I have a masters degree in computer science from the University of Illinois at Springfield. During that time, I was learning the foundations of computer science. I love developing websites and learning new technologies.</p>
             <p>I was always interested in learning about programming languages which led me to learn about Web Development. On my free time I like to listen to audiobooks, play the piano, and work on my fitness.</p>
             <p>I started out by learning Frontend Development because I felt really fascinated by it and wanted to learn more about that. I have worked on great projects which are a result of my passion for Web Development. I would like to work on a team
-                with great programmers. My skills are developing websites and I will strive to learn more and more everyday.</p>
+                with great programmers. My skills are developing websites and I will strive to learn more and more everyday.
+            </p>
             <p>I continue to work hard everyday and I will do the best that I can in delivering quality work.
             </p>
-        </section>
-        <section class="my-pic">
+        </div>
+        <div class="my-pic">
             <img src="Faras.jpg" alt="Faras pic" />
-        </section>
+        </div>
     </section>
-
     <section class="my-projects">
         <a name="my-projects"></a>
     </section>
-
     <section class="projects wrapper">
-        <section class="works">
+        <div class="works">
             <a title="projects"></a>
             <h2>My Projects </h2>
             <ul>
@@ -67,7 +63,7 @@
                     <h3>IP-finder</h3>
                     <p>
                         Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route. This is for businesses who want to identify visitor's geographical location and data. It was built
-                        to help them identify this information. It was implemented with HTML, CSS, AJAX, JavaScript, and the geolocation services API.</p>
+                        to help them identify this information. It was implemented with HTML, CSS, AJAX, JavaScript, and the geolocation services API.
                     </p>
                     <div class="button-wrapper">
                         <a href="https://marogef.github.io/ip-finder/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
@@ -82,7 +78,6 @@
                         for all users. This was built for shoppers who like to buy from Bestbuy. It is used in order to search for any item in Best Buy and help them with their experience. It was implemented using HTML5, CSS, JavaScript, Jquery, AJAX,
                         and the Bestbuy API.
                     </p>
-
                     <div class="button-wrapper">
                         <a href="https://mighty-fortress-39836.herokuapp.com/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
                         <a href="https://github.com/marogef/node-capstone-shoppers-guide-bestbuy" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
@@ -95,107 +90,104 @@
                         Full stack and react - Using Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. It is built for anyone who wants to learn and add
                         more recipes to their cooking. It was built to help people who want to cook with more options. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, React, and the Yummly API.
                     </p>
-
                     <div class="button-wrapper">
                         <a href="http://yummlyrecipe.club" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
                         <a href="https://github.com/marogef/fullstack-and-react-capstone-yummly" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
                     </div>
                 </li>
             </ul>
-        </section>
+        </div>
     </section>
     <section class="my-skills">
         <a name="my-skills"></a>
     </section>
-
-
     <section class="skills wrapper">
-        <section class="works">
+        <div class="works">
             <a title="skills"></a>
             <h2>Skills </h2>
-            <section class="mid-skills">
-                <section class="mid-content">
+            <div class="mid-skills">
+                <div class="mid-content">
                     <img src="css.png" alt="html pic" />
-                    <section class="inner-content">
+                    <div class="inner-content">
                         <h4> HTML5 & CSS: </h4>
                         <p>Using markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
-                    </section>
-                </section>
-            </section>
-            <section class="mid-skills">
-                <section class="mid-content">
+                    </div>
+                </div>
+            </div>
+            <div class="mid-skills">
+                <div class="mid-content">
                     <img src="javascript.png" alt="html pic" />
-                    <section class="inner-content">
+                    <div class="inner-content">
                         <h4> JavaScript & jQuery: </h4>
                         <p>Using the programming of HTML including functions, elements targetting, and event delegation.</p>
-                    </section>
-                </section>
-            </section>
-
-            <section class="mid-skills">
-                <section class="mid-content">
+                    </div>
+                </div>
+            </div>
+            <div class="mid-skills">
+                <div class="mid-content">
                     <img src="ajax.png" alt="html pic" />
-                    <section class="inner-content">
+                    <div class="inner-content">
                         <h4>AJAX, APIs & JSON: </h4>
                         <p>Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.</p>
-                    </section>
-                </section>
-            </section>
-
-            <section class="mid-skills-two">
-                <section class="mid-content">
+                    </div>
+                </div>
+            </div>
+            <div class="mid-skills-two">
+                <div class="mid-content">
                     <img src="node.png" alt="html pic" />
-                    <section class="inner-content">
+                    <div class="inner-content">
                         <h4>Node.js: </h4>
                         <p>Using the interface V8 JavaScript runtime. Use code pre-processing in Node.js.</p>
-                    </section>
-                </section>
-            </section>
-            <section class="mid-skills-two">
-                <section class="mid-content">
+                    </div>
+                </div>
+            </div>
+            <div class="mid-skills-two">
+                <div class="mid-content">
                     <img src="react.png" alt="html pic" />
-                    <section class="inner-content">
+                    <div class="inner-content">
                         <h4>React, React Router, Redux: </h4>
                         <p>Using JavaScript library for building user interfaces.</p>
-                    </section>
-                </section>
-            </section>
-
-            <section class="mid-skills-two">
-                <section class="mid-content">
+                    </div>
+                </div>
+            </div>
+            <div class="mid-skills-two">
+                <div class="mid-content">
                     <img src="github.png" alt="html pic" />
-                    <section class="inner-content">
+                    <div class="inner-content">
                         <h4>Git & Github: </h4>
                         <p>Build projects and use version control, backup, and project hosting.</p>
-                    </section>
-                </section>
-            </section>
-        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-
     <section class="my-contact">
         <a name="my-contact"></a>
     </section>
-
     <section class="contact">
-        <section class="inner-contact">
+        <div class="inner-contact">
             <a title="contact"></a>
             <h2>Contact me</h2>
             <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
-
-            <a href="https://www.facebook.com/faras.maroge " target="_blank"><img src="facebook.png " alt="facebook logo " class="social-icon "></a>
-            <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "
-                target="_blank"><img src="linkedin.png" alt="linkedln logo " class="social-icon "></a>
-            <a href="https://github.com/marogef " target="_blank"><img src="github.png" alt="github logo " class="social-icon "></a>
-            <a href="mailto:golencrane33@yahoo.com"><img src="email.png" alt="email image" class="social-icon"></a>
-        </section>
+            <a href="https://www.facebook.com/faras.maroge" target="_blank">
+                <img src="facebook.png " alt="facebook logo" class="social-icon ">
+            </a>
+            <a href="https://www.linkedin.com/in/faras-maroge-98552076" target="_blank">
+                <img src="linkedin.png" alt="linkedln logo " class="social-icon ">
+            </a>
+            <a href="https://github.com/marogef" target="_blank">
+                <img src="github.png" alt="github logo " class="social-icon ">
+            </a>
+            <a href="mailto:golencrane33@yahoo.com">
+                <img src="email.png" alt="email image" class="social-icon">
+            </a>
+        </div>
     </section>
     <footer class="footer ">
         <p>&copy; 2018 Faras Maroge</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="smooth-scroll.js"></script>
-
 </body>
 
 </html>
