updated the bestbuy link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         and the Bestbuy API.
                     </p>
                     <div class="button-wrapper">
-                        <a href="https://mighty-fortress-39836.herokuapp.com/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
+                        <a href="https://shoppers-guide-bestbuy.herokuapp.com/index.html" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
                         <a href="https://github.com/marogef/node-capstone-shoppers-guide-bestbuy" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
                     </div>
                 </li>
