fixed the shoppers guide link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="https://mighty-fortress-39836.herokuapp.com/" target="_blank"><img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic"></a>
+                    <a href="https://shoppers-guide-bestbuy.herokuapp.com/index.html" target="_blank"><img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic"></a>
                     <h3>Bestbuy</h3>
                     <p>
                         Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful
