--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <p>I have a masters degree in computer science from the University of Illinois at Springfield. During that time, I was learning the foundations of computer science. I love developing websites and learning new technologies.</p>
             <p>I was always interested in learning about programming languages which led me to learn about Web Development. On my free time I like to listen to audiobooks, play the piano, and work on my fitness.</p>
             <p>I started out by learning Frontend Development because I felt really fascinated by it and wanted to learn more about that. I have worked on great projects which are a result of my passion for Web Development. I would like to work on a team
-                with great programmers. My skills are developing websites and I will strive to learn more and more everyday.
+                with great programmers. My skills are developing websites and I will strive to learn more and more every day.
             </p>
-            <p>I continue to work hard everyday and I will do the best that I can in delivering quality work.
+            <p>I continue to work hard every day and I will do the best that I can in delivering quality work.
             </p>
         </div>
         <div class="my-pic">
@@ -110,7 +110,7 @@
                     <img src="css.png" alt="html pic" />
                     <div class="inner-content">
                         <h4> HTML5 & CSS: </h4>
-                        <p>Using markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
+                        <p>Using markup language features including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
         <div class="inner-contact">
             <a title="contact"></a>
             <h2>Contact me</h2>
-            <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
+            <p>Feel free to contact me any time and I will get back to you. Thank you very much.</p>
             <a href="https://www.facebook.com/faras.maroge" target="_blank">
                 <img src="facebook.png " alt="facebook logo" class="social-icon ">
             </a>
