fixed a few types and made a font change in the header section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link href=' https://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 </head>
@@ -110,7 +109,7 @@
                     <img src="css.png" alt="html pic" />
                     <div class="inner-content">
                         <h4> HTML5 & CSS: </h4>
-                        <p>Using markup language features including lists, table. Using the stylesheet for changing color, font, layout and much more.</p>
+                        <p>Using HTML5 which incorporates the latest version of Hypertext Markup Language.  Using CSS for describing the presentation of web pages for colors, layout, and fonts.</p>
                     </div>
                 </div>
             </div>
