added the Google maps project
updated with the latest app.

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
                     </div>
                 </li>
                 <li>
-                    <a href="http://yummlyrecipe.club" target="_blank"><img class="sec-image" src="yummly.jpg" alt="Yummly pic"></a>
-                    <h3>Yummly</h3>
+                    <a href="http://yummlyrecipe.club" target="_blank"><img class="sec-image" src="Google-map.png" alt="map pic"></a>
+                    <h3>Google Maps Platform</h3>
                     <p>
-                        Full stack and react - Using Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. It is built for anyone who wants to learn and add
-                        more recipes to their cooking. It was built to help people who want to cook with more options. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, React, and the Yummly API.
+                        Using Google maps which makes use of the JavaScript API. The content was customized on the maps to display the locations based on where the user clicked. 
+                        This was implemented using HTML5, CSS, Javascript, and the Google maps API.
                     </p>
                     <div class="button-wrapper">
-                        <a href="http://yummlyrecipe.club" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
-                        <a href="https://github.com/marogef/fullstack-and-react-capstone-yummly" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
+                        <a href="https://marogef.github.io/API-CityFinder/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
+                        <a href="https://github.com/marogef/API-CityFinder" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
                     </div>
                 </li>
             </ul>
