added another project
added a section to the prject section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
                         <a href="https://github.com/marogef/API-CityFinder" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
                     </div>
                 </li>
+                                <li>
+                    <a href="https://marogef.github.io/michigantech/" target="_blank"><img class="sec-image" src="networking.png" alt="networking pic"></a>
+                    <h3>Michigan United Tech</h3>
+                    <p>
+                        Made a project to help other developers and business owners in the community of Detroit so that they network with each and help each other succeed. This included valuable information so other people can find jobs in the tech industry.   
+                        This was implemented using HTML5, CSS, and JavaScript.
+                    </p>
+                    <div class="button-wrapper">
+                        <a href="https://marogef.github.io/michigantech/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
+                        <a href="https://github.com/marogef/michigantech" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
