--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="http://yummlyrecipe.club" target="_blank"><img class="sec-image" src="Google-map.png" alt="map pic"></a>
+                    <a href="https://marogef.github.io/API-CityFinder/" target="_blank"><img class="sec-image" src="Google-map.png" alt="map pic"></a>
                     <h3>Google Maps Platform</h3>
                     <p>
                         Using Google maps which makes use of the JavaScript API. The content was customized on the maps to display the locations based on where the user clicked. 
@@ -98,8 +98,7 @@
                     <a href="https://marogef.github.io/michigantech/" target="_blank"><img class="sec-image" src="networking.png" alt="networking pic"></a>
                     <h3>Michigan United Tech</h3>
                     <p>
-                        Made a project to help other developers and business owners in the community of Detroit so that they network with each and help each other succeed. This included valuable information so other people can find jobs in the tech industry.   
-                        This was implemented using HTML5, CSS, and JavaScript.
+                        Made a project to help other developers and business owners in the community of Detroit so that they network with each and help each other succeed. It was for a local organization that helped developers with networking. This included valuable information so other people can find jobs in the tech industry. The project was implemented using HTML5, CSS, and JavaScript.
                     </p>
                     <div class="button-wrapper">
                         <a href="https://marogef.github.io/michigantech/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
