Updated the gourmet page
New update for the gourmet project.

--- a/index.html
+++ b/index.html
@@ -70,16 +70,14 @@
                     </div>
                 </li>
                 <li>
-                    <a href="https://shoppers-guide-bestbuy.herokuapp.com/index.html" target="_blank"><img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic"></a>
-                    <h3>Bestbuy</h3>
+                    <a href="http://patelmarogeelmenshawy.wordpress.com" target="_blank"><img class="sec-image" src="Gourmet.jpg" alt="Gourmet pic"></a>
+                    <h3>Gourmet</h3>
                     <p>
-                        Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful
-                        for all users. This was built for shoppers who like to buy from Bestbuy. It is used in order to search for any item in Best Buy and help them with their experience. It was implemented using HTML5, CSS, JavaScript, Jquery, AJAX,
-                        and the Bestbuy API.
+                        Objective of the project: This software helps individuals to find good blogs and contribute to the business. The site will help in easy maintaining and updating blogs in the website for the administrator. Also quick and easy comparison of different blogs for the potential customers.  It was developed with Wordpress.
                     </p>
                     <div class="button-wrapper">
-                        <a href="https://shoppers-guide-bestbuy.herokuapp.com/index.html" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
-                        <a href="https://github.com/marogef/node-capstone-shoppers-guide-bestbuy" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
+                        <a href="http://patelmarogeelmenshawy.wordpress.com" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
+                        <a href="https://github.com/marogef/patelmarogeelmenshawy" target="_blank"><i class="fab fa-github"></i> Access GitHub</a>
                     </div>
                 </li>
                 <li>
@@ -87,7 +85,7 @@
                     <h3>Google Maps Platform</h3>
                     <p>
                         Using Google maps which makes use of the JavaScript API. The content was customized on the maps to display the locations based on where the user clicked. 
-                        This was implemented using HTML5, CSS, Javascript, and the Google maps API.
+                        This was implemented using HTML5, CSS, Javascript, and the Google maps API.  This is based on subscription with Google maps in which users will have to pay to Google.  Subscription may be renewed based on the individual's needs.
                     </p>
                     <div class="button-wrapper">
                         <a href="https://marogef.github.io/API-CityFinder/" target="_blank"><i class="far fa-eye"></i> Live Preview</a>
